<resources>
    <string name="app_name">USB Gadget Tool</string>
    <string name="no_root">USB Gadget Tool requires "root" permissions.</string>
    <string name="activate">Activate!</string>
    <string name="deactivate">Deactivate!</string>
    <string name="gadget_refresh">Refresh</string>
    <string name="gadget_add">Add USB Gadget</string>
    <string name="info">Information</string>
    <string name="info_title">USB Gadget Tool v0.4 beta</string>
    <string name="info_message">
USB Gadget Tool gives you full control over the USB Device services on your phone. For this ConfigFS on the OS Kernel is used.\n\n
By tejado (Tjado Mäcke)\n\n
Website:\n
https:\/\/github.com/tejado/android-usb-gadget
    </string>
    <string name="card_tooltip">Click on a Gadget for more options!</string>
    <string name="card_head_gadget_path">Gadget Path:</string>
    <string name="card_no_info">n/a</string>
    <string name="card_head_gadget_manufacturer">Manufacturer:</string>
    <string name="card_head_gadget_product">Product:</string>
    <string name="card_head_gadget_sn">Serialnumber:</string>
    <string name="card_head_gadget_device">USB Device:</string>
    <string name="card_head_gadget_status">Gadget Status:</string>
    <string name="card_head_gadget_functions">Functions:</string>
    <string name="add_function">Add Function</string>
    <string name="gadget_manager_card_tooltip">Available gadgets</string>
    <string name="head_gadget_boot_activate">Activate gadget during boot:</string>
    <string name="card_head_gadget_settings">General Settings</string>
    <string name="card_head_gadget_profile">Gadget Profile:</string>
    <string name="card_head_gadget_boot_create">Add gadget during boot:</string>
    <string name="card_head_gadget_boot_activate">Activate gadget during boot:</string>
    <string name="warning">Warning</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_understood">Got it!</string>
    <string name="diag_warning_boot_mismatch">Only gadgets added at boot can be activated at boot!\nSee gadget configuration below</string>
    <string name="diag_warning_boot">Please test the gadgets carefully before enabling them during boot!\n\nAdding / activating gadgets during boot can lead to infinity reboot loops on certain devices!\n\nGadgets are getting added / created after unlocking the screen. Before that, the system default is applied.</string>
</resources>