<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryDescent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimaryDescent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_card_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/card_head_gadget_settings"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/tv_gadget_boot_activate_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/head_gadget_boot_activate"
                    android:textSize="15sp"
                    android:layout_margin="5dp"/>

                <LinearLayout
                        android:id="@+id/spinner_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_bg"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp">

                        <Spinner
                            android:id="@+id/spinner_boot_activate"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:dropDownVerticalOffset="40dp"
                            android:layout_weight="4"
                            android:gravity="center"
                            android:background="@android:color/transparent"
                            android:spinnerMode="dropdown"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:src="@drawable/ic_baseline_arrow_drop_down_24" />
                    </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_card_info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/gadget_manager_card_tooltip"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:paddingTop="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_gadget_profiles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDescent"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>